--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.jclouds</groupId>
     <artifactId>jclouds-project</artifactId>        
-    <version>1.9.2-SNAPSHOT</version>
+    <version>1.9.2-rc.667</version>
     <relativePath>project/pom.xml</relativePath>
   </parent>
   <artifactId>jclouds</artifactId>
