--- a/project/pom.xml
+++ b/project/pom.xml
@@ -27,7 +27,7 @@
   </parent>
   <groupId>org.apache.jclouds</groupId>
   <artifactId>jclouds-project</artifactId>
-  <version>1.9.2-SNAPSHOT</version>
+  <version>1.9.2-rc.667</version>
   <packaging>pom</packaging>
   <name>Apache jclouds Project</name>
   <url>http://jclouds.apache.org/</url>
